Revert context.sdk.java #1132
Task-Url: https://github.com/eclipse-mylyn/org.eclipse.mylyn/issues/1132