@@ -16,6 +16,8 @@ package org.eclipse.mylyn.java.tests;
 import java.io.IOException;
 import java.lang.reflect.InvocationTargetException;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
 import org.eclipse.core.resources.IFolder;
@@ -51,21 +53,16 @@ import org.eclipse.ui.progress.IProgressService;
 /**
  * From Erich Gamma's "Contributing to Eclipse" book.
  *
- * @deprecated use {@link org.eclipse.mylyn.context.sdk.java.TestJavaProject} instead
  * @author Mik Kersten
  */
-@Deprecated
 @SuppressWarnings("nls")
 public class TestJavaProject {
-	@Deprecated
 	public IProject project;
 
-	@Deprecated
 	public IJavaProject javaProject;
 
 	private IPackageFragmentRoot sourceFolder;
 
-	@Deprecated
 	public TestJavaProject(final String name) throws CoreException, InvocationTargetException, InterruptedException {
 		IWorkspaceRoot root = ResourcesPlugin.getWorkspace().getRoot();
 		project = root.getProject(name);
@@ -80,17 +77,14 @@ public class TestJavaProject {
 		addSystemLibraries();
 	}
 
-	@Deprecated
 	public IProject getProject() {
 		return project;
 	}
 
-	@Deprecated
 	public IJavaProject getJavaProject() {
 		return javaProject;
 	}
 
-	@Deprecated
 	public void build() throws CoreException, InvocationTargetException, InterruptedException {
 		WorkspaceModifyOperation op = new WorkspaceModifyOperation() {
 			@Override
@@ -102,7 +96,6 @@ public class TestJavaProject {
 		service.run(true, true, op);
 	}
 
-	@Deprecated
 	public IPackageFragment createPackage(String name) throws CoreException {
 		if (sourceFolder == null) {
 			sourceFolder = createSourceFolder();
@@ -110,7 +103,6 @@ public class TestJavaProject {
 		return sourceFolder.createPackageFragment(name, false, null);
 	}
 
-	@Deprecated
 	public IType createType(IPackageFragment pack, String cuName, String source) throws JavaModelException {
 		StringBuilder buf = new StringBuilder();
 		buf.append("package " + pack.getElementName() + ";\n");
@@ -158,7 +150,6 @@ public class TestJavaProject {
 		javaProject.setRawClasspath(newEntries, null);
 	}
 
-	@Deprecated
 	public void addJar(Plugin plugin, String jar) throws MalformedURLException, IOException, JavaModelException {
 		Path result = findFileInPlugin(plugin, jar);
 		IClasspathEntry[] oldEntries = javaProject.getRawClasspath();
@@ -171,16 +162,20 @@ public class TestJavaProject {
 	private Path findFileInPlugin(Plugin plugin, String file) throws MalformedURLException, IOException {
 		// Plugin p = Platform.getPlugin(plugin);
 		URL pluginURL = plugin.getBundle().getEntry("/");
-		URL jarURL = new URL(pluginURL, file);
-		URL localJarURL = FileLocator.toFileURL(jarURL);//Platform.asLocalURL(jarURL);
-		return new Path(localJarURL.getPath());
+		try {
+			URI jarURI = pluginURL.toURI().resolve(file);
+			URL localJarURL = FileLocator.toFileURL(jarURI.toURL());
+			return new Path(localJarURL.getPath());
+		} catch (URISyntaxException e) {
+			throw new MalformedURLException(e.getMessage());
+		}
 	}
 
-	@Deprecated
+	@SuppressWarnings("deprecation")
 	public void waitForIndexer() throws JavaModelException {
 		new SearchEngine().searchAllTypeNames(null, null, SearchPattern.R_EXACT_MATCH, IJavaSearchConstants.CLASS,
 				SearchEngine.createJavaSearchScope(new IJavaElement[0]), new TypeNameRequestor() {
-					// nothing needs to be done here...we accept everything
-				}, IJavaSearchConstants.WAIT_UNTIL_READY_TO_SEARCH, null);
+			// nothing needs to be done here...we accept everything
+		}, IJavaSearchConstants.WAIT_UNTIL_READY_TO_SEARCH, null);
 	}
 }
